push akhir perbaikan

--- a/modul3.ipynb
+++ b/modul3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x20481c70190>"
+       "<matplotlib.image.AxesImage at 0x1d7af4f1150>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x204820fd7d0>"
+       "<matplotlib.image.AxesImage at 0x1d7af5c7890>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -385,9 +385,9 @@
     }
    ],
    "source": [
-    "dkmp4Level = DkmpDinamis(4, lowKernel, highKernel, yagamiGray)\n",
+    "dkmp4 = DkmpDinamis(4, lowKernel, highKernel, yagamiGray)\n",
     "plt.figure(figsize=(10,10))\n",
-    "plt.imshow(dkmp4Level, cmap=\"gray\")"
+    "plt.imshow(dkmp4, cmap=\"gray\")"
    ]
   },
   {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x204828a3d90>"
+       "<matplotlib.image.AxesImage at 0x1d7af606e50>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -565,16 +565,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x20481c4b750>"
+       "<matplotlib.image.AxesImage at 0x1d7af3cb550>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,7 +590,7 @@
     }
    ],
    "source": [
-    "dkmp5 = Dkmp(dkmp4Level,lowKernel,highKernel)\n",
+    "dkmp5 = Dkmp(dkmp4,lowKernel,highKernel)\n",
     "dkmp5.Proses()\n",
     "\n",
     "dkmp6 = Dkmp(dkmp5.LLDS,lowKernel,highKernel)\n",
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
